Added copyright Aiditto note

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -126,11 +126,22 @@ Please watch our Hackathon submission movie below:
     <source src="https://aiditto.se/video_idea/Aiditto_final_video_6April_H.264.mp4"  type="video/mp4">
   </video>
 </div>
+<BR/>
 
         </div>
         <div class="col-md-2">
         </div>
     </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+<p align="center">&#169; Copyright 2020 Aiditto. All rights reserved.</p>
+
+        </div>
+    </div>
+</div>
+
+
     
 </div>
 
